--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,11 @@ body {
 .procedure-content p {
   line-height: 2.1;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
